gitops/social-media/raw/05-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: socialmediaapp-django:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
