gitops/social-media/raw/09-microservice-go-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-go
  labels:
    app: microservice-go
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice-go
  template:
    metadata:
      labels:
        app: microservice-go
    spec:
      containers:
        - name: microservice-go
          image: socialmediaapp-microservice-go:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
