gitops/social-media/raw/19-minio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  labels:
    app: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: socialmediaapp-minio:latest
          imagePullPolicy: Never
          args:
            - server
            - /data
            - --console-address
            - ":9004"
          ports:
            - containerPort: 9000
            - containerPort: 9004
          volumeMounts:
            - name: minio-data
              mountPath: /data
      volumes:
        - name: minio-data
          emptyDir:
            sizeLimit: 2Gi
