gitops/social-media/raw/10-microservice-java-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice-java
spec:
  selector:
    app: microservice-java
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
