gitops/social-media/raw/13-kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: default
spec:
  clusterIP: None
  selector:
    app: kafka
  ports:
    - name: plaintext
      port: 9092
      targetPort: 9092
    - name: controller
      port: 9093
      targetPort: 9093
