gitops/social-media/raw/22-ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: social-media-frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /social(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend-prod
            port:
              number: 80
